feat: 기존 정보 수정

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>나라기업</title>
+    <title>LSH</title>
 </head>
 <body>
     <h1>running...</h1>
